--- a/package.json
+++ b/package.json
@@ -12,5 +12,15 @@
     "@nuxt/devtools": "latest",
     "@types/node": "^18",
     "nuxt": "^3.5.2"
+  },
+  "dependencies": {
+    "@mdi/font": "^7.2.96",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.9",
+    "@vueuse/nuxt": "^10.1.2",
+    "sass": "^1.63.3",
+    "tailwindcss": "^3.3.2"
   }
 }
